--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=Todo-Project
 
-spring.datasource.url=jdbc:h2:mem:todoDB
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/demodb
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=admin
 spring.datasource.password=1234
 
 spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.description.sql=TRACE
