--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=Todo-Project
 
-spring.datasource.url=jdbc:mysql://localhost:3306/demodb
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=admin
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://dpg-d4u4f56uk2gs73cf8bgg-a:5432/tododb
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=tododb_f1pq_user
+spring.datasource.password=fbKuPOodCm504WjlmjfhBb3HRgWKmUV0
 
 spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.description.sql=TRACE
